--- a/activity/index.html
+++ b/activity/index.html
@@ -561,8 +561,7 @@
                   "由于网站存款有收取手续费，请您务必到账成功金额为以上申请档位方可参与此优惠，例如：手续费1%，提交505元，到账500元，可以申请此优惠。",
                 ],
               },
-            ],
-            selectedActivity: {},
+            ]
           },
           {
             name: "7-老用户每日首存",
@@ -723,6 +722,229 @@
               },
             ],
           },
+          {
+            name: "中东-新老用户首存",
+            comment: ["long term effective.", "all old users of this platform can participate in the event."],
+            table: {
+              th: ["First deposit amount", "New user bonus","Old user reward"],
+              td: [
+                [300, 48, 0],
+                [500, 68, 6],
+                [1000, 88, 16],
+                [2000, 128, 26],
+                [3000, 188, 36],
+                [5000, 288, 56],
+                [10000, 588, 166],
+                [20000, 1288, 366]
+              ],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "Activity Rules:",
+                text: [
+                  "Customers who first deposit and recharge more than 300 yuan per day can participate, and users who receive bonuses need to pay three times the turnover (principal + bonus) before they can withdraw cash.",
+                ],
+              },
+              {
+                title: "Designated games:",
+                text: [
+                  "Users who receive bonuses are only allowed to play electronic games, and the full amount will be deducted if they play other games. Only the principal is refunded, remember to follow the rules.",
+                ],
+              },
+              {
+                title: "Collection rules:",
+                text: [
+                  "Find the online customer service to apply for the bonus at the first time after recharging, if a betting behavior has occurred, it will be deemed to be waived automatically.",
+                ],
+              },
+              {
+                title: "Kind tips:",
+                text: [
+                  "Since there is a handling fee charged for deposits on the website, please make sure that the successful amount in the account is above the application level to participate in this discount. For example: the handling fee is 1%, 505 yuan is submitted, and 500 yuan is received in the account, you can apply for this discount.",
+                ],
+              },
+            ],
+          },
+          {
+            name: "中东-全民电子救援金",
+            comment: ["long term effective.", "all old users of this platform can participate in the event."],
+            table: {
+              th: ["Amount of loss", "Electronic"],
+              td: [
+                [1000, 58],
+                [3000, 108],
+                [5000, 188],
+                [10000, 388],
+                [30000, 1088],
+                [50000, 1888]
+              ],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "Activity Rules:",
+                text: [
+                  "1. Calculation time: 00:00-23:59 every day, the user needs the rescue fund of the day before the 24th of the next day, and if it is overdue, it will be deemed to be automatically given up. pick up within hours.",
+                  "2. The rescue money will be different according to how much the player lost in the electronic venue on that day Level bonus, loss on the day = deposit-withdrawal-balance (account balance must be less than 10 USD). ",
+                  "for example: if the player loses 1,000 USD on the day, he can apply for a bonus of 58 USD the next day.",
+                  "3. How to apply: Apply to the online customer service the next day after the loss occurs, and the rescue fund will be automatically distributed to your game account.",
+                  "4. You can withdraw cash only if you spend 5 times in the electronic account. If you play other venues, all will be deducted amount.",
+                  "5. This offer cannot be shared with the first deposit offer."
+                ],
+              }
+            ],
+          },
+          {
+            name: "中东-六级提现分红",
+            comment: ["long term effective.", "all old users of this platform can participate in the event."],
+            table: {
+              th: ["Lv.1", "Lv.2", "Lv.3", "Lv.4", "Lv.5", "Lv.6"],
+              td: [
+                ["20%", "20%", "20%", "20%", "10%", "10%"]
+              ],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "Activity Rules:",
+                text: [
+                  "1. The platform will charge a 2% withdrawal fee when withdrawing cash, of which 1% will be used as Promotion rewards for superior agents.",
+                  "2. The platform will distribute this fee to the upper level 6 agents in proportion.",
+                  "3. This bonus reward is settled daily, please enter the withdrawal interface to claim it.",
+                  "4. The more directly affiliated, the more dividend income you will get, and the benefits will be given to the real people who do things agent."
+                ],
+              }
+            ],
+          },
+          {
+            name: "中东-无限代整盘分红",
+            comment: false,
+            table: {
+              th: ["Grade", "Name", "Weekly performance", "Shares"],
+              td: [
+                [1, "intern", "100,000+", 3],
+                [2, "staff", "300,000+", 4],
+                [3, "assistant", "600,000+", 5],
+                [4, "director", "1.2 million+", 6],
+                [5, "Department manager", "2 million+", 7],
+                [6, "Regional manager", "4 million+", 8],
+                [7, "General manager", "8 million+", 9],
+                [8, "Director", "12 million+", 10],
+                [9, "Chairman", "20 million+", 12]
+              ],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "Dividend distribution rules:",
+                text: [
+                  "1. We distribute 30% of the platform profits as performance dividends every week to those who meet the conditions agent.",
+                  "2. The effective performance of the platform = the total performance of the platform owner's weekly performance of more than 100,000 USD, and my effective performance = the sum of the weekly performance of the team owner's weekly performance of more than 100,000 USD. ",
+                  "3. Platform dividend = (total platform dividend * dividend ratio) such as: the total profit of the week is 100,000 USD The dividend is 30,000 USD.",
+                  "4. The performance requirement of the team participating in this activity is not less than 100,000. If the agent only 1 subordinate, Then his effective performance is 0.",
+                  "5. After counting the effective performance of the platform every week, the system will automatically convert it into the corresponding amount of shares The system automatically allocates the number of shares according to the effective performance of the agent.",
+                  "6. The system automatically determines the amount of your shares based on my effective performance. For example, if my effective performance this week is 10 million, every 10,000 performance will be automatically converted into 9 shares.",
+                  "7. Individual shares = team shares - subordinate shares, if only one subordinate is represented, then he stake is 0.",
+                  "8. The time for receiving dividends is from -01:00 every week to 22:00 on Sundays. ",
+                  "9. The system automatically divides the dividends according to the grades.",
+                  "10. The platform reserves the right of final interpretation of this activity.",
+                ],
+              },
+            ],
+            example: {
+              text: "Example: (The values ​​in the figure below are for reference only)",
+              chart: [
+                "1000万×11=11000股",
+                "500万×9",
+                "4500",
+                "250万×7",
+                "1750",
+                "250万×7",
+                "1750",
+                "11000股-4500股-1750股-1750股=3000股",
+                "3",
+              ],
+            },
+          },
+          {
+            name: "中东-全民随时洗码",
+            comment: ["long term effective.", "all old users of this platform can participate in the event."],
+            table: {
+              th: ["Participate in the game", "Wash code ratio"],
+              td: [
+                ["Electronics/Chess/Fishing", "0.1%"]
+              ],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "Activity Rules:",
+                text: [
+                  "1. Members can self-collect and wash codes at any time at the code washing center.",
+                  "2. The bonus can be withdrawn only after 1 times turnover.",
+                  "3. Illegal betting such as flat brushing/gambling is not allowed. Once found, the amount will be deducted and the account will be frozen."
+                ],
+              }
+            ],
+          },
+          {
+            name: "中东-每日签到",
+            comment: ["long term effective.", "all old users of this platform can participate in the event."],
+            table: {
+              th: ["Days", "Bonus"],
+              td: [
+                ["Day 1", "10 USD"],
+                ["Day 2", "30 USD"],
+                ["Day 3", "50 USD"],
+                ["Day 4", "80 USD"],
+                ["Day 5", "100 USD"],
+                ["Day 6", "128 USD"],
+                ["Day 7", "168 USD"],
+              ],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "Activity Rules:",
+                text: [
+                  "1. Members must make a daily deposit of 1,000 usd or more to participate.",
+                  "2. If you meet the conditions before the Daily check-in is terminated, you can continue to participate in the Daily check-in.",
+                  "3. The signing-in gift can be withdrawn only by 3 double."
+                ],
+              }
+            ],
+          },
+          {
+            name: "中东-荣升vip等级",
+            comment: ["long term effective.", "all old users of this platform can participate in the event."],
+            table: {
+              th: ["VIP level", "Cumulative valid bet", "Promotion bonus", "Monthly betting requirements", "Monthly bonus"],
+              td: [
+                ["VIP1", "0", 0, "0", 0],
+                ["VIP2", "50,000+", 18, "0", 0],
+                ["VIP3", "100,000+", 38, "10,000+", 18],
+                ["VIP4", "500,000+", 108, "30,000+", 38],
+                ["VIP5", "2 million+", 288, "50,000+", 88],
+                ["VIP6", "5 million+", 588, "100,000+", 188],
+                ["VIP7", "20 million+", 1088, "500,000+", 388],
+                ["VIP8", "50 million+", 3888, "1 million+", 888],
+                ["VIP9", "100 million+", 8888, "5 million+", 1888],
+                ["VIP10", "1 billion+", 18888, "10 million+", 3888],
+              ],
+            },
+            tableComment: false,
+            rule: [
+              {
+                title: "Activity Rules:",
+                text: [
+                  "1. There is no need to apply for this activity, and the system will automatically distribute it if the requirements are met!",
+                  "2. The winnings Payment can be made once the turnover is doubled.",
+                  "3. Illegal bets such as flat brushing/gambling are not allowed, and will be deducted once found quota, frozen account number processing."
+                ],
+              }
+            ],
+          }
         ],
         selectedActivity: {},
         editable: false,
