--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
           "川崎娱乐",
           "银河国际",
           "开运棋牌",
-          "吉祥娱乐"
+          "吉祥娱乐",
+          "月夕娱乐"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
