--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
           "银河国际",
           "开运棋牌",
           "吉祥娱乐",
-          "月夕娱乐"
+          "月夕娱乐",
+          "钱江娱乐",
+          "奢华娱乐"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
