--- a/activity/index.html
+++ b/activity/index.html
@@ -567,7 +567,7 @@
             name: "7-老用户每日首存",
             comment: ["长期有效", "所有本平台老用户均可参加活动"],
             table: {
-              th: ["首存金额", "新用户首存"],
+              th: ["首存金额", "老用户首存"],
               td: [
                 [500, 6],
                 [1000, 16],
