--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
           "吉祥娱乐",
           "月夕娱乐",
           "钱江娱乐",
-          "奢华娱乐"
+          "奢华娱乐",
+          "星河娱乐",
+          "豪华娱乐",
+          "春风娱乐"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
