--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@
           "奢华娱乐",
           "星河娱乐",
           "豪华娱乐",
-          "春风娱乐"
+          "春风娱乐",
+          "白羊国际",
+          "奔达娱乐",
+          "魂斗娱乐",
+          "帝豪国际"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
