--- a/activity/index.html
+++ b/activity/index.html
@@ -157,7 +157,7 @@
               {
                 title: "活动规则",
                 text: [
-                  "1.新用户注册后未游戏前联系在线客服申请，只限电子游戏，如玩其他游戏扣除所有余额。",
+                  "1.新用户注册后未游戏前联系在线客服申请，只限电子游戏（街机类yoplay/购买免费旋转游戏除外），如玩其他游戏扣除所有余额。",
                   "2.未达到标准不能转账及提款，活动中途充值不算有效达标，参与此活动不可参与其他活动，违反规则将扣除全部金额。",
                   "3.本平台保留此活动最终解释权。",
                 ],
