--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           this.serviceCharge = 0.02;
           console.log(this.tableData);
         },
-        changeTOPAY() {
+        changeTOPay() {
           this.icon = 27;
           this.type = "TOPay";
           this.serviceCharge = 0.02;
