--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <img
           src="img/okpay-pic.png"
-          v-if="type === 'TOPay'"
+          v-if="type === 'OKPay'"
           alt=""
           class="okpay-pic"
         />
