--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <td contenteditable>{{item.date}}</td>
               <td>{{banks[icon]}}</td>
               <td>{{item.drawing}}</td>
-              <td>{{Math.round(item.drawing * serviceCharge)}}</td>
+              <td>{{Math.floor(item.drawing * serviceCharge)}}</td>
               <td>{{Math.ceil(item.drawing * (1 - serviceCharge))}}</td>
               <td>提款完成</td>
               <td><img src="img/copy.png" alt="" /></td>
