--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@
           "白羊国际",
           "奔达娱乐",
           "魂斗娱乐",
-          "帝豪国际"
+          "帝豪国际",
+          "凯越娱乐",
+          "星宇娱乐",
+          "超越国际"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
