--- a/activity/index.html
+++ b/activity/index.html
@@ -223,7 +223,7 @@
                 text: [
                   "1.平台将按照玩家总存款的0.5%金额，作为上级代理的推广奖励。（0.5%是平台承担，玩家没有任何损失和之前没有变化）",
                   "2.此分红平台将按照比例分给上级6层代理。",
-                  "3.此分红奖励每日结算，请进入取款界面进行领取。",
+                  "3.此分红奖励每日结算，请进入存款界面进行领取。",
                   "4.直属越多，所得的返利收益就会越多，将利益送给真正做事的代理。",
                 ],
               },
