--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
           "帝豪国际",
           "凯越娱乐",
           "星宇娱乐",
-          "超越国际"
+          "超越国际",
+          "锦州娱乐",
+          "哈雷娱乐",
+          "公牛娱乐"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
