--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
           "超越国际",
           "锦州娱乐",
           "哈雷娱乐",
-          "公牛娱乐"
+          "公牛娱乐",
+          "铃木娱乐",
+          "爵士娱乐"
         ],
         selectedPlatform: "浪花娱乐",
         banks: [
