--- a/activity/index.html
+++ b/activity/index.html
@@ -149,6 +149,38 @@
         selectedAPP: 1,
         activity: [
           {
+            name: "10-新增有效直属排行榜",
+            comment: ["长期有效", "所有本平台用户均可参加活动"],
+            table: {
+              th: ["排名", "奖励金额"],
+              td: [
+                ["第一名", "1888"],
+                ["第二名", "888"],
+                ["第三名", "588"],
+                ["第四名", "388"],
+                ["第五名", "188"],
+                ["第六名~第十名", "58"],
+              ],
+            },
+            tableComment: '注：每日新增有效直属会员最低8人的代理可以参与领取奖金。',
+            rule: [
+              {
+                title: "活动规则",
+                text: [
+                  "1.有效会员定义：",
+                  "●例1：A代理直属会员A1当日充值300以上（包含300）算一个新增会员。",
+                  "●例2：B代理直属会员B1在2023年12月29注册，但是在2023年12月30日充值300元则算在2023年12月30日名额。",
+                  "注：以上排行是新增会员，老会员充值不计入名额。",
+                  "2.若排行榜中出现新增有效直属会员数相同的情况，则需参考总存款金额的高低依次进行排名。",
+                  "3.奖金会在每日凌晨00:30自动派发，请注意查收站内邮件。",
+                  "4.奖金需3倍流水即可提现。",
+                  "5.此优惠仅限电子/捕鱼使用，若游戏其他游戏将扣除全部额度。",
+                  "6.同IP/同姓名/同手机号/多账户充值只算做一个名额，若发现任何团队或个人以不正当方式套利，将永久封号处理。"
+                ],
+              },
+            ],
+          },
+          {
             name: "9-新用户充值大放送",
             comment: ["7月11日 ~ 7月13日", "本平台新用户均可参加活动"],
             table: false,
