--- a/activity/index.html
+++ b/activity/index.html
@@ -149,6 +149,35 @@
         selectedAPP: 1,
         activity: [
           {
+            name: "10-佣金竞技榜名单",
+            comment: false,
+            table: {
+              th:["排名","UID","奖金"],
+              td:[
+                ["第一名","","2888"],
+                ["第二名","","1888"],
+                ["第三名","","1388"],
+                ["第四名","","1088"],
+                ["第五名","","888"],
+                ["第六名","","688"],
+                ["第七名","","588"],
+                ["第八名","","588"],
+                ["第九名","","588"],
+                ["第十名","","588"],
+                ["第十一名","","388"],
+                ["第十二名","","388"],
+                ["第十三名","","388"],
+                ["第十四名","","388"],
+                ["第十五名","","388"],
+                ["第十六名","","288"],
+                ["第十七名","","288"],
+                ["第十八名","","288"]
+              ]
+            },
+            tableComment: '恭喜代理上榜 ，奖励将于次日13点派发，届时请查收您的游戏账号即可，希望再接再厉，争取日日上榜。',
+            rule: false
+          },
+          {
             name: "10-新增有效直属排行榜",
             comment: ["长期有效", "所有本平台用户均可参加活动"],
             table: {
