--- a/activity/index.html
+++ b/activity/index.html
@@ -171,7 +171,9 @@
                 ["第十五名","","388"],
                 ["第十六名","","288"],
                 ["第十七名","","288"],
-                ["第十八名","","288"]
+                ["第十八名","","288"],
+                ["第十九名","","288"],
+                ["第二十名","","288"],
               ]
             },
             tableComment: '恭喜代理上榜 ，奖励将于次日13点派发，届时请查收您的游戏账号即可，希望再接再厉，争取日日上榜。',
