--- a/activity/index.html
+++ b/activity/index.html
@@ -154,26 +154,26 @@
             table: {
               th:["排名","UID","奖金"],
               td:[
-                ["第一名","","2888"],
-                ["第二名","","1888"],
-                ["第三名","","1388"],
-                ["第四名","","1088"],
-                ["第五名","","888"],
-                ["第六名","","688"],
-                ["第七名","","588"],
-                ["第八名","","588"],
-                ["第九名","","588"],
-                ["第十名","","588"],
-                ["第十一名","","388"],
-                ["第十二名","","388"],
-                ["第十三名","","388"],
-                ["第十四名","","388"],
-                ["第十五名","","388"],
-                ["第十六名","","288"],
-                ["第十七名","","288"],
-                ["第十八名","","288"],
-                ["第十九名","","288"],
-                ["第二十名","","288"],
+                ["第一名","*","2888"],
+                ["第二名","*","1888"],
+                ["第三名","*","1388"],
+                ["第四名","*","1088"],
+                ["第五名","*","888"],
+                ["第六名","*","688"],
+                ["第七名","*","588"],
+                ["第八名","*","588"],
+                ["第九名","*","588"],
+                ["第十名","*","588"],
+                ["第十一名","*","388"],
+                ["第十二名","*","388"],
+                ["第十三名","*","388"],
+                ["第十四名","*","388"],
+                ["第十五名","*","388"],
+                ["第十六名","*","288"],
+                ["第十七名","*","288"],
+                ["第十八名","*","288"],
+                ["第十九名","*","288"],
+                ["第二十名","*","288"],
               ]
             },
             tableComment: '恭喜代理上榜 ，奖励将于次日13点派发，届时请查收您的游戏账号即可，希望再接再厉，争取日日上榜。',
