--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
         "哈雷娱乐",
         "公牛娱乐",
         "铃木娱乐",
-        "爵士娱乐"
+        "爵士娱乐",
+        "锦绣娱乐",
+        "海鹏娱乐",
+        "力帆娱乐",
+        "贝纳利娱乐"
       ],
       redPlatform: [
         "鼎华娱乐"
