--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
         "锦绣娱乐",
         "海鹏娱乐",
         "力帆娱乐",
-        "贝纳利娱乐"
+        "贝纳利娱乐",
+        "乾坤国际",
+        "金龙娱乐"
       ],
       redPlatform: [
         "鼎华娱乐"
