--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
         "力帆娱乐",
         "贝纳利娱乐",
         "乾坤国际",
-        "金龙娱乐"
+        "金龙娱乐",
+        "雅马哈",
+        "印第安",
+        "神龙"
       ],
       redPlatform: [
         "鼎华娱乐"
