--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
         "金龙娱乐",
         "雅马哈",
         "印第安",
-        "神龙"
+        "神龙",
+        "圣龙国际",
+        "无极",
+        "宝龙国际"
       ],
       redPlatform: [
         "鼎华娱乐"
