--- a/index.html
+++ b/index.html
@@ -113,7 +113,13 @@
         "神龙",
         "圣龙国际",
         "无极",
-        "宝龙国际"
+        "宝龙国际",
+        "利物浦",
+        "东方美",
+        "双鱼国际",
+        "红心娱乐",
+        "永恒娱乐",
+        "巨蟹国际"
       ],
       redPlatform: [
         "鼎华娱乐"
