--- a/index.html
+++ b/index.html
@@ -119,10 +119,16 @@
         "双鱼国际",
         "红心娱乐",
         "永恒娱乐",
-        "巨蟹国际"
+        "巨蟹国际",
+        "黑桃娱乐",
+        "东方汇",
+        "天秤国际",
+        "龙之谷",
+        "方块娱乐"
       ],
       redPlatform: [
-        "鼎华娱乐"
+        "鼎华娱乐",
+        "金元棋牌"
       ],
       selectedPlatform: "鼎华娱乐",
       banks: [
