--- a/commissionlist/index.html
+++ b/commissionlist/index.html
@@ -46,9 +46,10 @@
       month: '',
       day: '',
       platformList: [
-        "鼎华棋牌"
+        "鼎华棋牌",
+        "金元棋牌"
       ],
-      selectedAPP: '鼎华棋牌',
+      selectedAPP: '金元棋牌',
       idData: [],
       resultArr: []
     },
