--- a/ysyl/index.html
+++ b/ysyl/index.html
@@ -18,7 +18,7 @@
     <img src="./img/light-hole.png" alt="">
     <img src="./img/coin.webp" alt="">
     <img src="./img/poker.webp" alt="">
-    <img src="./img/girl.webp" alt="">
+    <img src="./img/girl.png" alt="">
   </div>
   <div class="content">
     <img src="./img/logo.png" alt="">
