--- a/index.html
+++ b/index.html
@@ -102,14 +102,7 @@
       type: "银行卡",
       serviceCharge: 0.02,
       bluePlatform: [
-        "锦绣娱乐",
-        "海鹏娱乐",
-        "力帆娱乐",
-        "贝纳利娱乐",
-        "乾坤国际",
         "金龙娱乐",
-        "雅马哈",
-        "印第安",
         "神龙",
         "圣龙国际",
         "无极",
@@ -124,7 +117,10 @@
         "东方汇",
         "天秤国际",
         "龙之谷",
-        "方块娱乐"
+        "方块娱乐",
+        "天蝎国际",
+        "梅花娱乐",
+        "摩羯娱乐"
       ],
       redPlatform: [
         "鼎华娱乐",
